plugins { id 'java-library' }

group = 'io.surfworks.snakeburger'
version = '0.0.1-SNAPSHOT'

repositories { mavenCentral() }

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    // Use the Babylon JDK toolchain javac (26) and also force the incubator module on.
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.code'])
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs += ['--add-modules', 'jdk.incubator.code']
}
